# retroarcade

./: .env  .gitignore  Cargo.toml  README.md  retroarcade.toml  rustfmt.toml
scripts/: download_openvgdb.sh
src/: audio.rs  cache.rs  config.rs  dialog.rs  emulator.rs  game_db.rs  gamepad.rs  hash.rs  main.rs  menu.rs  old.rs  saves.rs  scraper.rs  user_db.rs
src/shaders/: glowing_frag.glsl  glowing_vert.glsl
